--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+URL: https://github.com/jamiewiener119/indexical
+BugReports: https://github.com/jamiewiener119/indexical/issues
